# nbody

./: .gitignore  Bufor.cpp  Bufor.h  CMakeLists.txt  Camera.cpp  Camera.h  Camera2.h  Cialo.cpp  Cialo.h  Consts.h  Headers.h  ParticleSystem.cpp  ParticleSystem.h  Program.cpp  Program.h  README.md  Shader.cpp  Shader.h  Wektor.cpp  Wektor.h  Zakres.h  fragment_shader.glsl  main.cpp  particles.fragmentshader  particles.vertexshader  stale.h  vertex_shader.glsl
